dev-app/dev-busybox/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: lesson6
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
