dev-app/dev-busybox/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: my-app-dev
spec:
  ingressClassName: nginx
  rules:
  - host: my-app-dev.demo.kubeadm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc   
            port:
              number: 80
